--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221129103759">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221129122311">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,13 +27,11 @@
 						<a href="#" class="cursor-castom__link">Ссылка</a>
 					</div>
 					<div class="cursor-castom__card">
-						<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Input" class="cursor-castom__input input">
+						<input type="text" name="form[]" data-error="Ошибка" placeholder="Input" class="cursor-castom__input input">
 					</div>
 					<div class="cursor-castom__card">
 						<a href="#" class="cursor-castom__picture-ibg">
-							<picture>
-								<source srcset="img/7.webp" type="image/webp"><img src="img/7.jpg" alt="">
-							</picture>
+							<picture><source srcset="img/7.webp" type="image/webp"><img src="img/7.jpg" alt=""></picture>
 						</a>
 						<p class="cursor-castom__text">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel exercitationem temporibus eos iste soluta nobis quod cum tempore aperiam quam omnis saepe impedit
@@ -73,7 +71,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20221129103759"></script>
+	<script src="js/app.min.js?_v=20221129122311"></script>
 </body>
 
 </html>
